[project]
name = "mockfs"
authors = [
    {name = "David Aguilar", email = "davvid@gmail.com"}
]
classifiers = [
	"Development Status :: 6 - Mature",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing",
	"Topic :: Software Development :: Testing :: Mocking",
	"Topic :: Software Development :: Testing :: Unit",
]
description = "A simple mock filesystem for unit tests"
dynamic = ["dependencies", "optional-dependencies", "version"]
license = {file = "LICENSE"}
readme = "README.rst"

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.cercis]
function-definition-extra-indent = false
line-length = 88

[tool.setuptools_scm]
# "fallback_version" does not (currently) work when building from tarballs.
# "fallback_version" should start working once this upstream issue is resolved:
# https://github.com/pypa/setuptools_scm/issues/549
fallback_version = "2.0.0"
