[project]
name = "mockfs"
authors = [
    {name = "David Aguilar", email = "davvid@gmail.com"}
]
classifiers = [
	"Development Status :: 6 - Mature",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing",
	"Topic :: Software Development :: Testing :: Mocking",
	"Topic :: Software Development :: Testing :: Unit",
]
description = "A simple mock filesystem for unit tests"
dynamic = ["dependencies", "optional-dependencies", "version"]
license = {file = "LICENSE"}
readme = "README.rst"

[build-system]
requires = ["setuptools>=56", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.cercis]
function-definition-extra-indent = false
line-length = 88

[tool.pytest-enabler.ruff]
addopts = "--ruff"

[tool.setuptools_scm]
fallback_version = "2.0.0"
