[metadata]
name = mockfs
long_description = file:README.rst
url = https://github.com/mockfs/mockfs

[upload_sphinx]
upload-dir = docs/_build/html

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[options]
packages =
    mockfs
install_requires =
	importlib_metadata
zip_safe = true

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-cov
	pytest-enabler >= 1.0.1

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	# local
