[metadata]
name = mockfs
long_description = file:README.rst
url = https://github.com/mockfs/mockfs

[upload_sphinx]
upload-dir = docs/_build/html

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[options]
packages =
	mockfs
install_requires =
	importlib_metadata
zip_safe = true

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-enabler >= 2.2
	pytest-ruff

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo

	# local

dev =
	cercis

build =
	build
	twine[keyring]>=1.13
	wheel
